# crewai-learning

./: README.md
02- ai_news/: pyproject.toml
02- ai_news/src/ai_news/: crew.py  main.py
02- ai_news/src/ai_news/config/: agents.yaml  tasks.yaml
03 - poem_flow/: poem.txt  pyproject.toml
03 - poem_flow/src/poem_flow/: main.py
meeting_minutes/: pyproject.toml
meeting_minutes/src/meeting_minutes/: main.py
meeting_minutes/src/meeting_minutes/crews/gmailcrew/: gmailcrew.py
meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
pdf_rag/: pyproject.toml
pdf_rag/db/: chroma.sqlite3
pdf_rag/src/pdf_rag/: crew.py  main.py
src/latest_ai_development/: crew.py
