[project]
name = "poem_flow"
version = "0.1.0"
description = "poem-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "pydantic>=2.11.7",
]

[project.scripts]
kickoff = "poem_flow.main:kickoff"
run_crew = "poem_flow.main:kickoff"
plot = "poem_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
