[project]
name = "meeting_minutes"
version = "0.1.0"
description = "meeting_minutes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "agentops>=0.4.20",
    "black>=25.1.0",
    "crewai[tools]>=0.165.1,<1.0.0",
    "pydub>=0.25.1",
]

[project.scripts]
kickoff = "meeting_minutes.main:kickoff"
run_crew = "meeting_minutes.main:kickoff"
plot = "meeting_minutes.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
